--- a/styles/abstract/_mixin.scss
+++ b/styles/abstract/_mixin.scss
@@ -20,5 +20,6 @@
   padding-left: 5px;
   grid-template-columns: repeat(6, 1fr);
   display: grid;
+  gap: 4px;
   text-align: start;
 }
