--- a/styles/layout/_table.scss
+++ b/styles/layout/_table.scss
@@ -1,11 +1,16 @@
 @use "../vendors/all" as *;
 
+.table-wrapper {
+  min-width: 830px;
+  overflow: auto;
+}
+
 .table {
-  width: 100%;
+  width: calc(100% - 2px);
   list-style-type: none;
   border-radius: 8px;
   border: 1px solid $table-border-color;
-  overflow: hidden;
+  overflow-y: hidden;
   :last-child {
     border-bottom: none;
   }
